# sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
agentinc/sdk/: __init__.py  agent.py  canonical.py  protocol.py  raw.py  schemas.py  serve.py  tenant.py  tool.py
agentinc/sdk/audit/: __init__.py  backends.py  schemas.py
agentinc/sdk/memory/: __init__.py  base.py  redis.py
agentinc/sdk/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
docs/: index.html
examples/: agent_with_tools.py  anthropic_agent.py  audit_agent.py  crewai_agent.py  echo_agent.py  langchain_agent.py  mcp_agent.py  memory_agent.py  openai_agent.py  rag_agent.py  streaming_agent.py  tool_agent.py
skills/agentinc-sdk/: SKILL.md
skills/agentinc-sdk/references/: api.md  frameworks.md  raw-adapter.md  serve.md
tests/: test_agent.py  test_audit.py  test_canonical.py  test_gemini.py  test_protocol.py  test_raw.py  test_schemas.py  test_serve.py  test_tenant.py  test_tool.py
