[project]
name = "agentinc-sdk"
version = "0.2.0"
description = "Developer SDK for the Agentinc agent marketplace platform"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.25"]
gemini     = ["google-genai>=1.0"]
memory     = ["redis>=5.0"]
mcp        = ["mcp>=1.0"]
serve      = ["fastapi>=0.115", "uvicorn[standard]>=0.34", "sse-starlette>=2.0"]
dev        = ["pytest>=9.0", "pytest-asyncio>=1.3", "pytest-mock>=3.0"]
all        = [
    "openai>=1.0",
    "anthropic>=0.25",
    "google-genai>=1.0",
    "redis>=5.0",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentinc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
